--- a/index.html
+++ b/index.html
@@ -10,93 +10,47 @@
     
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <div id="navWrap">
-    <nav class="navbar navbar-expand-md p-3">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="img/amd.svg" alt="demo dbook logo" height="40">
+<body class="home">
+  <header class="back-imagen">
+    <nav class="navbar navbar-expand-lg navbar-dark p-3 align-items-center" id="headerNav">
+      <div class="container-fluid d-flex align-items-center">
+        <a class="navbar-brand d-block d-lg-none" href="#">
+          <img src="img/amd.svg" height="40" />
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="ms-auto">
-          <i class="fas fa-arrow-right" id="toggleRightMenu"></i>
+  
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link mx-2 active" aria-current="page" href="#">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="#">Torneos</a>
+            </li>
+            <li class="nav-item d-none d-lg-block">
+              <a class="nav-link mx-2" href="#">
+                <img src="img/amd.svg" height="40" />
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="#">Equipos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link mx-2" href="#">Información</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
-    <div id="verticalNavWrap">
-      <div class='verticalNav'>
-        <div class="siteNavLabel  text-center">About Us</div>
-        <div class="navContent">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col">
-                <h2 class="jumboHeading">About Us</h2>
-                <p class="pt-4 ps-4 pe-4">
-                  A mobile app to register users's entry exit. Designed and developed by Siva Kishore G.
-                </p>
-                <div class="ms-4">
-                  <button class="btn btn-info">Download now</button>
-                </div>
-              </div>
-              <div class="col">
-                <div><a href="#" class="subNavMenu">Blog</a></div>
-                <div><a href="#" class="subNavMenu">Contact Us</a></div>
-                <div><a href="#" class="subNavMenu">Subscribe</a></div>
-                <div><a href="#" class="subNavMenu">Partners</a></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class='verticalNav'>
-        <div class="siteNavLabel text-center">Pricing</div>
-        <div class="navContent">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col">
-                <h2 class="jumboHeading">Pricing</h2>
-                <p class="p-4">
-                  Create upto 5 locations and 30 days of backup for free users.
-                </p>
-              </div>
-              <div class="col">
-                <div class="card text-center" style="width: 18rem;">
-                  <div class="card-header bg-info">PREMIUM</div>
-                  <div class="card-body">
-                    <h5 class="card-title"></h5>
-                    <ul class="card-text list-unstyled">
-                      <li>Upto 20 Locations</li>
-                      <li>1 Year Data</li>
-                      <li>Separate App</li>
-                      <li>Zero Ads</li>
-                      <li>Unlimited popups</li>
-                    </ul>
-                  </div>
-                  <div class="card-footer bg-dark text-white">2000 INR</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class='verticalNav text-center text-white'>
-        <div class="siteNavLabel">Services</div>
-        <div class="navContent">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-md-7 mx-auto">
-                <h2 class="jumboHeading">Services</h2>
-                <p class="p-4">
-                  Servicing apartments, restaurants, hotels &amp; businesses
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+
+    <div class="first-section position-relative d-flex flex-column align-items-center justify-content-center">
+      <p class="fs-2 fw-bold">MÁLAGA</p>
+      <p class="fs-5 fw-bold">Congress Center</p>
+      <p class="fs-2 fw-bold">09.01.23</p>
     </div>
-  </div>
+    
+  </header>
 </body>
 </html>
